Corregido calculo de nomenglatura

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <p class="control is-expanded has-icons-left">
               <input class="input" type="text" placeholder="Grados">
               <span class="icon is-small is-left">
-                <i class="fa fa-user"></i>
+                <i class="fa fa-hashtag"></i>
               </span>
             </p>
           </div>
@@ -27,7 +27,7 @@
             <p class="control is-expanded has-icons-left has-icons-right">
               <input class="input" type="text" placeholder="Minutos">
               <span class="icon is-small is-left">
-                <i class="fa fa-envelope"></i>
+                <i class="fa fa-hashtag"></i>
               </span>
             </p>
           </div>
@@ -35,7 +35,7 @@
               <p class="control is-expanded has-icons-left has-icons-right">
                 <input class="input" type="text" placeholder="Segundos">
                 <span class="icon is-small is-left">
-                  <i class="fa fa-envelope"></i>
+                  <i class="fa fa-hashtag"></i>
                 </span>
               </p>
             </div>
@@ -51,7 +51,7 @@
               <p class="control is-expanded has-icons-left">
                 <input class="input" type="text" placeholder="Grados">
                 <span class="icon is-small is-left">
-                  <i class="fa fa-user"></i>
+                  <i class="fa fa-hashtag"></i>
                 </span>
               </p>
             </div>
@@ -59,7 +59,7 @@
               <p class="control is-expanded has-icons-left has-icons-right">
                 <input class="input" type="text" placeholder="Minutos">
                 <span class="icon is-small is-left">
-                  <i class="fa fa-envelope"></i>
+                  <i class="fa fa-hashtag"></i>
                 </span>
               </p>
             </div>
@@ -67,12 +67,36 @@
                 <p class="control is-expanded has-icons-left has-icons-right">
                   <input class="input" type="text" placeholder="Segundos">
                   <span class="icon is-small is-left">
-                    <i class="fa fa-envelope"></i>
+                    <i class="fa fa-hashtag"></i>
                   </span>
                 </p>
               </div>
           </div>
         </div>
+      
+      <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Escala</label>
+          </div>
+          <div class="field-body">
+            <div class="select">
+                <select>
+                  <option>Selecciona una escala</option>
+                  <option>1000000</option>
+                  <option>500000</option>
+                  <option>250000</option>
+                  <option>100000</option>
+                  <option>50000</option>
+                  <option>20000</option>
+                  <option>10000</option>
+                  <option>5000</option>
+                  <option>2000</option>
+                  <option>1000</option>
+                  <option>500</option>
+                </select>
+              </div>
+          </div>
+      </div>
       
       <div class="field is-horizontal">
         <div class="field-label">
