Restructura del proyecto

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       
   </div>
 
-<script src="./bundle.js"></script>
+<script src="./assets/bundle.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnEF-6y4TIn3G8-Lz8aGLS_uECEqa5Npg&callback=cargarMapa"></script>
 
 </body>
